--- a/Resources/lib/framework/spec/javascripts/support/jasmine.yml
+++ b/Resources/lib/framework/spec/javascripts/support/jasmine.yml
@@ -12,6 +12,7 @@
 #
 src_files:
     - support/functional.js
+    - support/temp_id.js
     - lib/bootstrap.js
     - lib/base.js
     - lib/**/*.js
