--- a/platform/android/AndroidManifest.xml
+++ b/platform/android/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" ?><manifest android:versionCode="1" android:versionName="1" package="com.webcapsule.webcapsule" xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" ?><manifest android:versionCode="1" android:versionName="1" package="com.looprecur.webcapsulemobile" xmlns:android="http://schemas.android.com/apk/res/android">
 	<supports-screens android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:resizeable="false" android:smallScreens="false"/><uses-sdk android:minSdkVersion="7"/>
 
 	<!-- TI_MANIFEST -->
@@ -20,8 +20,7 @@
 						<data android:scheme="startonuri" />
 						<data android:host="*" />
 				</intent-filter>
-	  </activity>
-		<activity android:name="ti.modules.titanium.facebook.FBActivity" android:screenOrientation="portrait" android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"/>
+	  </activity><activity android:name="ti.modules.titanium.facebook.FBActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"/>
 		<activity android:configChanges="keyboardHidden|orientation" android:screenOrientation="portrait" android:launchMode="singleTask" android:name="ti.modules.titanium.media.TiVideoActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
 
 		
