--- a/platform/android/AndroidManifest.xml
+++ b/platform/android/AndroidManifest.xml
@@ -16,9 +16,7 @@
 				    <action android:name="android.intent.action.VIEW"/>
 				    <category android:name="android.intent.category.DEFAULT"/>
 				    <category android:name="android.intent.category.BROWSABLE"/>
-						<category android:name="android.intent.category.LAUNCHER"/>
-						<data android:scheme="startonuri" />
-						<data android:host="*" />
+						<data android:host="oauth" android:scheme="startonuri"/>
 				</intent-filter>
 	  </activity><activity android:name="ti.modules.titanium.facebook.FBActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"/>
 		<activity android:configChanges="keyboardHidden|orientation" android:screenOrientation="portrait" android:launchMode="singleTask" android:name="ti.modules.titanium.media.TiVideoActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
