--- a/platform/android/AndroidManifest.xml
+++ b/platform/android/AndroidManifest.xml
@@ -9,18 +9,14 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+						<intent-filter>
+								<data android:scheme="webcapsule-mobile" />
+						    <action android:name="android.intent.action.VIEW"/>
+						    <category android:name="android.intent.category.DEFAULT"/>
+						    <category android:name="android.intent.category.BROWSABLE"/>
+						</intent-filter>
         </activity>
 
-		<activity android:label="webcapsule-mobile" android:name="OAUTHActivity" android:screenOrientation="portrait">
-				<intent-filter>
-				    <action android:name="android.intent.action.VIEW"/>
-				    <category android:name="android.intent.category.DEFAULT"/>
-				    <category android:name="android.intent.category.BROWSABLE"/>
-						<category android:name="android.intent.category.LAUNCHER"/>
-						<data android:scheme="startonuri" />
-						<data android:host="*" />
-				</intent-filter>
-	  </activity>
 		<activity android:name="ti.modules.titanium.facebook.FBActivity" android:screenOrientation="portrait" android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"/>
 		<activity android:configChanges="keyboardHidden|orientation" android:screenOrientation="portrait" android:launchMode="singleTask" android:name="ti.modules.titanium.media.TiVideoActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
 
